# portunix

./: .gitignore  .golangci.yml  .goreleaser.yml  .markdownlint-cli2.jsonc  .markdownlint.jsonc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Portunix.g4  README-aur.md  README-docs.md  README-github-workflow.md  README.cs.md  README.md  TESTING.md  TODO.md  Taskfile.yml  build-with-version.sh  docker.portunix.bat  gen.antlr4.bat  go.mod  go.sum  install-from-server.ps1  install-from-server.sh  main.go  main_test.go  portunix.exe.manifest  portunix.rc  portunix.syso  pyproject.toml  pytest.ini  require.bat  requirements-test.txt  requirements.txt  test_docker.sh  versioninfo.cmd  versioninfo.json
app/: api.go  archive.go  go.mod  help.go  preprocessor.go  rest.go  setup.go  ssh.go  tools.go  vm.go
assets/: install-isos.json  install-packages.json
cmd/: create.go  create_vm.go  datastore.go  docker.go  docker_install.go  docker_management.go  docker_run_in_container.go  edge.go  go.mod  install-self.go  install.go  install_apt.go  install_chocolatey.go  install_iso.go  logout.go  mcp.go  mcp_common.go  mcp_configure.go  mcp_reconfigure.go  mcp_remove.go  mcp_server.go  mcp_status.go  plugin.go  podman.go  podman_desktop.go  podman_install.go  podman_management.go  podman_run_in_container.go  root.go  sandbox_default.go  sandbox_generate.go  sandbox_run_in_sandbox.go  sandbox_start.go  system.go  unzip.go  update.go  version.go  vm.go  vm_connect.go  vm_create.go  (+7 more)
docs/: DOCKER-VS-PODMAN.md  FEATURES_OVERVIEW.md  ISO-16355-QFD.md  (+3 more)
docs-site/: hugo.toml
(+881 files in other folders)
