[project]
name = "portunix-tooling"
version = "0.0.0"
description = "Python tooling for the Portunix repository (scripts and integration tests). Not a published package."
requires-python = ">=3.11"

[dependency-groups]
test = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.6.0",
    "pytest-html>=3.1.0",
    "requests>=2.28.0",
    "paramiko>=2.9.0",
    "pexpect>=4.8.0",
    "colorama>=0.4.4",
]
